m2_Parser.py
# Generated from m2_Parser.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class m2_Parser ( Parser ):

    grammarFileName = "m2_Parser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "' '", "','", "';'", "'('", "')'", "'{'", 
                     "'}'", "'['", "']'", "'interface'", "'enum'", "'object'", 
                     "'concept'", "'type'", "':'", "'.'", "'='", "'in'", 
                     "'of'", "'not'", "'$'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'var'", "'let'", "'const'", "'bind'", "'proc'", "'static'", 
                     "'method'", "'func'", "'mixin'", "'end'", "'except'", 
                     "'return'", "'try'", "'raise'", "'finally'", "'out'", 
                     "'case'", "'if'", "'elif'", "'else'", "'do'", "'while'", 
                     "'iterator'", "'for'", "'continue'", "'break'", "'template'", 
                     "'tuple'", "'using'", "'when'", "'yield'", "'include'", 
                     "'import'", "'from'", "'as'", "'export'", "'ref'", 
                     "'ptr'", "'addr'", "'asm'", "'block'", "'macro'", "'nil'", 
                     "'cast'", "'converter'", "'defer'", "'discard'", "'distinct'", 
                     "'`'" ]

    symbolicNames = [ "<INVALID>", "DOCUMENTATION_COMMENT", "MULTILINE_COMMENT", 
                      "COMMENT", "UNCONDITIONAL_NEWLINE", "WS", "COMMA", 
                      "SEMI_COLON", "OPEN_PAREN", "CLOSE_PAREN", "OPEN_BRACE", 
                      "CLOSE_BRACE", "OPEN_BRACK", "CLOSE_BRACK", "INTERFACE", 
                      "ENUM", "OBJECT", "CONCEPT", "TYPE", "COLON", "DOT", 
                      "EQUALS", "IN", "OF", "NOT", "DOLLAR_SIGN", "OP0", 
                      "OP1", "OP2", "OP3", "OP4", "OP5", "OP6", "OP7", "OP8", 
                      "OP9", "OP10", "VARIABLE", "LET", "CONST", "BIND", 
                      "PROC", "STATIC", "METHOD", "FUNC", "MIXIN", "END", 
                      "EXCEPT", "RETURN", "TRY", "RAISE", "FINALLY", "OUT", 
                      "CASE", "IF", "ELIF", "ELSE", "DO", "WHILE", "ITERATOR", 
                      "FOR", "CONTINUE", "BREAK", "TEMPLATE", "TUPLE", "USING", 
                      "WHEN", "YIELD", "INCLUDE", "IMPORT", "FROM", "AS", 
                      "EXPORT", "REF", "PTR", "ADDR", "ASM", "BLOCK", "MACRO", 
                      "NIL", "CAST", "CONVERTER", "DEFER", "DISCARD", "DISTINCT", 
                      "SYM_HEADER", "IDENTIFIER", "INT_LIT", "INT8_LIT", 
                      "INT16_LIT", "INT32_LIT", "INT64_LIT", "UINT_LIT", 
                      "UINT8_LIT", "UINT16_LIT", "UINT32_LIT", "UINT64_LIT", 
                      "EXP", "FLOAT_LIT", "FLOAT32_LIT", "FLOAT64_LIT", 
                      "CHAR_LIT", "STR_LIT", "TRIPLESTR_LIT", "RSTR_LIT", 
                      "GENERALIZED_STR_LIT", "GENERALIZED_TRIPLESTR_LIT", 
                      "DEDENT", "EXIT", "USELESS_LINE", "USELSSS_INDENTS", 
                      "INDENT", "INDENTS_PASS", "ERROR_INDENT" ]

    RULE_op0 = 0
    RULE_op1 = 1
    RULE_op2 = 2
    RULE_op3 = 3
    RULE_op4 = 4
    RULE_op5 = 5
    RULE_op6 = 6
    RULE_op7 = 7
    RULE_op8 = 8
    RULE_op9 = 9
    RULE_op10 = 10
    RULE_operator = 11
    RULE_prefixOperator = 12
    RULE_ind = 13
    RULE_optInd = 14
    RULE_optPar = 15
    RULE_ded = 16
    RULE_typeKeyw = 17
    RULE_parKeyw = 18
    RULE_generalizedLit = 19
    RULE_pragmaStmt = 20
    RULE_par = 21
    RULE_tupleConstr = 22
    RULE_arrayConstr = 23
    RULE_typeDesc = 24
    RULE_setOrTableConstr = 25
    RULE_castExpr = 26
    RULE_identOrLiteral = 27
    RULE_indexExpr = 28
    RULE_indexExprList = 29
    RULE_primarySuffix = 30
    RULE_primary = 31
    RULE_exprColonEqExpr = 32
    RULE_exprColonExpr = 33
    RULE_pragma = 34
    RULE_simpleExpr = 35
    RULE_arrowExpr = 36
    RULE_assignExpr = 37
    RULE_orExpr = 38
    RULE_andExpr = 39
    RULE_cmpExpr = 40
    RULE_sliceExpr = 41
    RULE_ampExpr = 42
    RULE_plusExpr = 43
    RULE_mulExpr = 44
    RULE_dollarExpr = 45
    RULE_exprList = 46
    RULE_condExpr = 47
    RULE_literal = 48
    RULE_symbolBody = 49
    RULE_symbol = 50
    RULE_blockExpr = 51
    RULE_ifExpr = 52
    RULE_whenExpr = 53
    RULE_dotExpr = 54
    RULE_forExpr = 55
    RULE_tryExpr = 56
    RULE_expr = 57
    RULE_ifStmt = 58
    RULE_moduleName = 59
    RULE_colonBody = 60
    RULE_returnStmt = 61
    RULE_raiseStmt = 62
    RULE_yieldStmt = 63
    RULE_discardStmt = 64
    RULE_breakStmt = 65
    RULE_continueStmt = 66
    RULE_importStmt = 67
    RULE_fromStmt = 68
    RULE_caseExpr = 69
    RULE_caseStmt = 70
    RULE_ofBranch = 71
    RULE_ofBranches = 72
    RULE_includeStmt = 73
    RULE_exprStmt = 74
    RULE_simpleStmt = 75
    RULE_condStmt = 76
    RULE_identVis = 77
    RULE_identVisDot = 78
    RULE_identWithPragma = 79
    RULE_whenStmt = 80
    RULE_whileStmt = 81
    RULE_tryStmt = 82
    RULE_pattern = 83
    RULE_genericParam = 84
    RULE_genericParamList = 85
    RULE_identWithPragmaDot = 86
    RULE_typeDefAux = 87
    RULE_typeClassParam = 88
    RULE_typeClass = 89
    RULE_typeDef = 90
    RULE_constant = 91
    RULE_varTuple = 92
    RULE_declColonEquals = 93
    RULE_identColonEquals = 94
    RULE_paramList = 95
    RULE_paramListColon = 96
    RULE_variable = 97
    RULE_qualifiedIdent = 98
    RULE_forStmt = 99
    RULE_blockStmt = 100
    RULE_staticStmt = 101
    RULE_deferStmt = 102
    RULE_asmStmt = 103
    RULE_routine = 104
    RULE_sectionTypeDef = 105
    RULE_sectionConstant = 106
    RULE_sectionVariable = 107
    RULE_bindStmt = 108
    RULE_mixinStmt = 109
    RULE_complexStmt = 110
    RULE_stmt = 111
    RULE_module = 112
    RULE_start = 113

    ruleNames =  [ "op0", "op1", "op2", "op3", "op4", "op5", "op6", "op7", 
                   "op8", "op9", "op10", "operator", "prefixOperator", "ind", 
                   "optInd", "optPar", "ded", "typeKeyw", "parKeyw", "generalizedLit", 
                   "pragmaStmt", "par", "tupleConstr", "arrayConstr", "typeDesc", 
                   "setOrTableConstr", "castExpr", "identOrLiteral", "indexExpr", 
                   "indexExprList", "primarySuffix", "primary", "exprColonEqExpr", 
                   "exprColonExpr", "pragma", "simpleExpr", "arrowExpr", 
                   "assignExpr", "orExpr", "andExpr", "cmpExpr", "sliceExpr", 
                   "ampExpr", "plusExpr", "mulExpr", "dollarExpr", "exprList", 
                   "condExpr", "literal", "symbolBody", "symbol", "blockExpr", 
                   "ifExpr", "whenExpr", "dotExpr", "forExpr", "tryExpr", 
                   "expr", "ifStmt", "moduleName", "colonBody", "returnStmt", 
                   "raiseStmt", "yieldStmt", "discardStmt", "breakStmt", 
                   "continueStmt", "importStmt", "fromStmt", "caseExpr", 
                   "caseStmt", "ofBranch", "ofBranches", "includeStmt", 
                   "exprStmt", "simpleStmt", "condStmt", "identVis", "identVisDot", 
                   "identWithPragma", "whenStmt", "whileStmt", "tryStmt", 
                   "pattern", "genericParam", "genericParamList", "identWithPragmaDot", 
                   "typeDefAux", "typeClassParam", "typeClass", "typeDef", 
                   "constant", "varTuple", "declColonEquals", "identColonEquals", 
                   "paramList", "paramListColon", "variable", "qualifiedIdent", 
                   "forStmt", "blockStmt", "staticStmt", "deferStmt", "asmStmt", 
                   "routine", "sectionTypeDef", "sectionConstant", "sectionVariable", 
                   "bindStmt", "mixinStmt", "complexStmt", "stmt", "module", 
                   "start" ]

    EOF = Token.EOF
    DOCUMENTATION_COMMENT=1
    MULTILINE_COMMENT=2
    COMMENT=3
    UNCONDITIONAL_NEWLINE=4
    WS=5
    COMMA=6
    SEMI_COLON=7
    OPEN_PAREN=8
    CLOSE_PAREN=9
    OPEN_BRACE=10
    CLOSE_BRACE=11
    OPEN_BRACK=12
    CLOSE_BRACK=13
    INTERFACE=14
    ENUM=15
    OBJECT=16
    CONCEPT=17
    TYPE=18
    COLON=19
    DOT=20
    EQUALS=21
    IN=22
    OF=23
    NOT=24
    DOLLAR_SIGN=25
    OP0=26
    OP1=27
    OP2=28
    OP3=29
    OP4=30
    OP5=31
    OP6=32
    OP7=33
    OP8=34
    OP9=35
    OP10=36
    VARIABLE=37
    LET=38
    CONST=39
    BIND=40
    PROC=41
    STATIC=42
    METHOD=43
    FUNC=44
    MIXIN=45
    END=46
    EXCEPT=47
    RETURN=48
    TRY=49
    RAISE=50
    FINALLY=51
    OUT=52
    CASE=53
    IF=54
    ELIF=55
    ELSE=56
    DO=57
    WHILE=58
    ITERATOR=59
    FOR=60
    CONTINUE=61
    BREAK=62
    TEMPLATE=63
    TUPLE=64
    USING=65
    WHEN=66
    YIELD=67
    INCLUDE=68
    IMPORT=69
    FROM=70
    AS=71
    EXPORT=72
    REF=73
    PTR=74
    ADDR=75
    ASM=76
    BLOCK=77
    MACRO=78
    NIL=79
    CAST=80
    CONVERTER=81
    DEFER=82
    DISCARD=83
    DISTINCT=84
    SYM_HEADER=85
    IDENTIFIER=86
    INT_LIT=87
    INT8_LIT=88
    INT16_LIT=89
    INT32_LIT=90
    INT64_LIT=91
    UINT_LIT=92
    UINT8_LIT=93
    UINT16_LIT=94
    UINT32_LIT=95
    UINT64_LIT=96
    EXP=97
    FLOAT_LIT=98
    FLOAT32_LIT=99
    FLOAT64_LIT=100
    CHAR_LIT=101
    STR_LIT=102
    TRIPLESTR_LIT=103
    RSTR_LIT=104
    GENERALIZED_STR_LIT=105
    GENERALIZED_TRIPLESTR_LIT=106
    DEDENT=107
    EXIT=108
    USELESS_LINE=109
    USELSSS_INDENTS=110
    INDENT=111
    INDENTS_PASS=112
    ERROR_INDENT=113

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    parKeyWList = [DISCARD, INCLUDE, IF, WHILE, CASE, TRY, FINALLY, EXCEPT, FOR, BLOCK, CONST, LET, WHEN, VARIABLE, MIXIN]
    literals = [INT_LIT, INT8_LIT, INT16_LIT , INT32_LIT , INT64_LIT, UINT_LIT , UINT8_LIT , UINT16_LIT , UINT32_LIT , UINT64_LIT, 
    FLOAT_LIT , FLOAT32_LIT , FLOAT64_LIT, STR_LIT , RSTR_LIT , TRIPLESTR_LIT, CHAR_LIT, NIL ]
    primarySuffixList = [SYM_HEADER, IDENTIFIER, literals, CAST, ADDR, TYPE]
    def tryExprBody():
        return self._input.LT(1).type in [self.EXCEPT, self.FINALLY] or (self._input.LT(1).type == self.INDENT and self._input.LT(2).type in [self.EXCEPT, self.FINALLY])



    class Op0Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OP0(self):
            return self.getToken(m2_Parser.OP0, 0)

        def getRuleIndex(self):
            return m2_Parser.RULE_op0

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOp0" ):
                listener.enterOp0(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOp0" ):
                listener.exitOp0(self)




    def op0(self):

        localctx = m2_Parser.Op0Context(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_op0)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 228
            self.match(m2_Parser.OP0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Op1Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OP1(self):
            return self.getToken(m2_Parser.OP1, 0)

        def EQUALS(self):
            return self.getToken(m2_Parser.EQUALS, 0)

        def getRuleIndex(self):
            return m2_Parser.RULE_op1

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOp1" ):
                listener.enterOp1(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOp1" ):
                listener.exitOp1(self)




    def op1(self):

        localctx = m2_Parser.Op1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_op1)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 230
            _la = self._input.LA(1)
            if not(_la==m2_Parser.EQUALS or _la==m2_Parser.OP1):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Op2Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OP2(self):
            return self.getToken(m2_Parser.OP2, 0)

        def COLON(self, i:int=None):
            if i is None:
                return self.getTokens(m2_Parser.COLON)
            else:
                return self.getToken(m2_Parser.COLON, i)

        def getRuleIndex(self):
            return m2_Parser.RULE_op2

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOp2" ):
                listener.enterOp2(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOp2" ):
                listener.exitOp2(self)




    def op2(self):

        localctx = m2_Parser.Op2Context(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_op2)
        try:
            self.state = 236
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 232
                self.match(m2_Parser.OP2)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 233
                self.match(m2_Parser.COLON)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 234
                self.match(m2_Parser.COLON)
                self.state = 235
                self.match(m2_Parser.COLON)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Op3Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OP3(self):
            return self.getToken(m2_Parser.OP3, 0)

        def getRuleIndex(self):
            return m2_Parser.RULE_op3

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOp3" ):
                listener.enterOp3(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOp3" ):
                listener.exitOp3(self)




    def op3(self):

        localctx = m2_Parser.Op3Context(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_op3)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 238
            self.match(m2_Parser.OP3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Op4Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OP4(self):
            return self.getToken(m2_Parser.OP4, 0)

        def getRuleIndex(self):
            return m2_Parser.RULE_op4

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOp4" ):
                listener.enterOp4(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOp4" ):
                listener.exitOp4(self)




    def op4(self):

        localctx = m2_Parser.Op4Context(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_op4)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 240
            self.match(m2_Parser.OP4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Op5Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OP5(self):
            return self.getToken(m2_Parser.OP5, 0)

        def IN(self):
            return self.getToken(m2_Parser.IN, 0)

        def OF(self):
            return self.getToken(m2_Parser.OF, 0)

        def NOT(self):
            return self.getToken(m2_Parser.NOT, 0)

        def getRuleIndex(self):
            return m2_Parser.RULE_op5

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOp5" ):
                listener.enterOp5(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOp5" ):
                listener.exitOp5(self)




    def op5(self):

        localctx = m2_Parser.Op5Context(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_op5)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 242
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << m2_Parser.IN) | (1 << m2_Parser.OF) | (1 << m2_Parser.NOT) | (1 << m2_Parser.OP5))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Op6Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OP6(self):
            return self.getToken(m2_Parser.OP6, 0)

        def DOT(self):
            return self.getToken(m2_Parser.DOT, 0)

        def getRuleIndex(self):
            return m2_Parser.RULE_op6

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOp6" ):
                listener.enterOp6(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOp6" ):
                listener.exitOp6(self)




    def op6(self):
